tests/ui/server_send/error/has-no-arguments.stderr
error: this attribute takes from one to three assign arguments

         = help: use `#[server_send(level=Level::WARN, name="Name", skip=[a, b])]`

 --> tests/ui/server_send/error/has-no-arguments.rs:4:1
  |
4 | #[server_send]
  | ^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `server_send` (in Nightly builds, run with -Z macro-backtrace for more info)
